package com.alma.climbingtraining.ui.home

const val TAG_TOOL_CARD_FLYING_LOTO = "tool_card_flying_loto"
const val TAG_TOOL_CARD_RANDOM_EXERCISE = "tool_card_random_exercise"
const val TAG_TOOL_CARD_WARMUP = "tool_card_warmup"
const val TAG_TOOL_CARD_RANDOM_PARTNER = "tool_card_random_partner"


